Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34311

Assertion error in new scenegraph renderer.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0
    • 5.2.0 Beta1
    • Quick: SceneGraph
    • None
    • 2192e5005b3ba3cff22388a4907e01c7c514d812 c7a3089c146d6063f3b3201149e42c720c8ca5b3 47635b6e872e3f537ba8859ff2ef7453a4ba374a

    Description

      When I test my QtQuick application (relatively complex) on 5.2 Beta1, I get the following assertion error quite often but randomly.

      -/
      ASSERT: "m_nodes.contains(node)" in file scenegraph\coreapi\qsgbatchrenderer.cpp, line 1170
      /-

      Stacktrace attached as a file.

      UPDATE:
      I managed to narrow down the causing situation. It doesn't assert in simpler QML file but the attached CrashTest.zip example project shows weird behaviour that I'm sure is related to the assert. When items are placed into Column, and each item has animations, the animation is applied to all the items in that column - for some reason. Just hover over the first items in the column and observe the opacity change.

      Attachments

        For Gerrit Dashboard: QTBUG-34311
        # Subject Branch Project Status CR V

        Activity

          People

            sletta Gunnar Sletta
            kiibimees Lauri Laanmets
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes